--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ jQuery(window).scroll(function () {
 </script>
 
 <footer>
-  <p class="rodape">Desenvolvido por <strong> @bitcoinander</strong></p>
+  <p class="rodape">Desenvolvido por <strong> @oanderoficial </strong></p>
 </footer>
 
       </body>
